--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@ background: radial-gradient(circle, rgba(245,245,246,1) 0%, rgba(228,228,236,1) 
   width: 190px;
   height: 254px;
   border-radius: 30px;
-  background: lightgrey;
+  background: white;
   box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 50px -12px inset,
     rgba(0, 0, 0, 0.3) 0px 18px 26px -18px inset;
 }
